added necessary components

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-REACT_APP_API_KEY=818b25373117bca82d8edd92ec8fae94
-REACT_APP_API_URL=https://api.example.com
+REACT_APP_OPENWEATHERMAP_API_KEY=b240b5db7e6d2bb0008f768fd38aa3a3
+REACT_APP_API_URL=http://api.openweathermap.org/data/2.5/weather?q=Toronto&appid=b240b5db7e6d2bb0008f768fd38aa3a3
+
+#http://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID=b240b5db7e6d2bb0008f768fd38aa3a3
 
